# turtle_orm

./: .gitignore  README.rst  create_readonly_user  manage.py  notes.md  pyproject.toml  requirements.txt  resetdb  turtle_orm.sublime-project
tortoise/: managers.py  models.py
turtle_orm/: base.py  settings.py  urls.py  wsgi.py
turtlecli/: __main__.py  cli.py  filters.py  gitify.py  observer_operator_report.py  reports.py  turtlecli.py  utils.py
turtlecli/subcommands/: byproject.py  bytime.py
